About me and re arrange layout

--- a/index.html
+++ b/index.html
@@ -33,31 +33,13 @@
 					</section>
 
 				<!-- Section -->
-					<section>
+
+					<section id="first">
 						<header>
 							<h2>About</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
-							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
-							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-						</div>
-					</section>
-
-				<!-- Section -->
-					<section id="first">
-						<header>
-							<h2>Peaks</h2>
-						</header>
-						<div class="content">
-							<p><strong>A full-stack </strong> application built to log and keep track of your peaks, views other users peaks, and more.</p>
+							<p>I'm a full stack engineer with a passion to find creative solutions and progress.  I thrive under pressure and have worked in many different fields from hotels to security and demolition. Through those experiences I realized I wanted to make a career that I would be passionate about. I had coded here and there and always enjoyed it and the freedom it gives you to build whatever you want with a little bit of work and creativity. If you're interested view my projects below. Need a new developer on your team? Need something built? Contact me on social media or my email me <a href=".items">here</a></p>
 							<span class="image main"><img src="images/peaks-image.jpeg" alt="" /></span>
 						</div>
 					</section>
@@ -65,7 +47,7 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Ultrices erat magna sed condimentum</h2>
+							<h2>Projects</h2>
 						</header>
 						<div class="content">
 							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
@@ -118,6 +100,26 @@
 
 						</div>
 					</section>
+
+					<!-- Section -->
+
+						<section>
+							<header>
+								<h2>Technologies</h2>
+							</header>
+							<div class="content">
+								<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+								<ul class="feature-icons">
+									<li class="icon solid fa-laptop">Consequat tempus</li>
+									<li class="icon solid fa-bolt">Etiam adipiscing</li>
+									<li class="icon solid fa-signal">Libero nullam</li>
+									<li class="icon solid fa-cog">Blandit condimentum</li>
+									<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
+									<li class="icon solid fa-code">Nibh amet venenatis</li>
+								</ul>
+								<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							</div>
+						</section>
 
 				<!-- Section -->
 					<section>
