--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 					<section class="intro">
 						<header>
 							<h1>Hi, <br>I'm Chris</h1>
-							<p>A Software Engineer based out of Denver, CO specializing in building and designing exeptional, high-quality websites and applications</p>
+							<p>A Software Engineer based out of Denver, CO specializing in building and designing effective, high-quality websites and applications</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/faceshot-image.jpeg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/cerro-toco.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -39,8 +39,8 @@
 							<h2>About</h2>
 						</header>
 						<div class="content">
-							<p>I'm a full stack engineer with a passion to find creative solutions and progress.  I thrive under pressure and have worked in many different fields from hotels to security and demolition. Through those experiences I realized I wanted to make a career that I would be passionate about. I had coded here and there and always enjoyed it and the freedom it gives you to build whatever you want with a little bit of work and creativity. If you're interested view my projects below. Need a new developer on your team? Need something built? Contact me on social media or my email me <a href=".items">here</a></p>
-							<span class="image main"><img src="images/peaks-image.jpeg" alt="" /></span>
+							<p>I'm a full stack engineer with a passion to find creative solutions and develop top tier applications.  I thrive under pressure and have worked in many different fields from ski lodges to security and demolition. Through those experiences I realized I wanted to make a career that I would be passionate about. I had coded here and there and always enjoyed it and the freedom it gives you to build whatever you want with a little bit of work and creativity. If you're interested feel free to view my projects below. Need a new developer on your team? Need something built? Contact me on social media or my email me <a href=".items">here</a></p>
+							<span class="image main"><img src="images/faceshot-image.jpeg" alt="" /></span>
 						</div>
 					</section>
 
@@ -50,20 +50,19 @@
 							<h2>Projects</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
 
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Erat aliquam</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
+										<h3>Spot Guide</h3>
+										<p>This project was made to be a guide to new locations where you can ski, mountain bike, or just all around get out and enjoy yourself. Complete with photo upload, descriptions, locations, that all can be made and edited by the users. Made with React.js in the front-end and Django and python in the back-end.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
+											<a href="images/sickspots2.png" class="landscape"><img src="images/sickspots2.png" alt="" /></a>
+											<!-- <a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a> -->
 										</div>
 									</div>
 								</section>
@@ -71,14 +70,14 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
+										<h3>Dev Spot</h3>
+										<p>Social media application for developers. Has User profiles, posts, and much more! Built with React front-end and Express, MongoDB in the back-end.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<a href="images/Dev-users.png" class="landscape"><img src="images/Dev-users.png" alt="" /></a>
+											<a href="images/Dev-posts.png"><img src="images/Dev-posts.png" alt="" /></a>
+											<a href="images/Dev-home.png"><img src="images/Dev-home.png" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -113,6 +112,9 @@
 									<li class="icon solid fa-laptop">Consequat tempus</li>
 									<li class="icon solid fa-bolt">Etiam adipiscing</li>
 									<li class="icon solid fa-signal">Libero nullam</li>
+									<li class="icon solid fa-cog">Blandit condimentum</li>
+									<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
+									<li class="icon solid fa-code">Nibh amet venenatis</li>
 									<li class="icon solid fa-cog">Blandit condimentum</li>
 									<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
 									<li class="icon solid fa-code">Nibh amet venenatis</li>
