Styles and projects

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<h2>About</h2>
 						</header>
 						<div class="content">
-							<p>I'm a full stack engineer with a passion to find creative solutions and develop top tier applications.  I thrive under pressure and have worked in many different fields from ski lodges to security and demolition. Through those experiences I realized I wanted to make a career that I would be passionate about. I had coded here and there and always enjoyed it and the freedom it gives you to build whatever you want with a little bit of work and creativity. If you're interested feel free to view my projects below. Need a new developer on your team? Need something built? Contact me on social media or my email me <a href=".items">here</a></p>
+							<p>I'm a full stack engineer with a passion to find creative solutions and develop top tier applications.  I thrive under pressure and have worked in many different fields from ski lodges to security and demolition. Through those experiences I realized I wanted to make a career that I would be passionate about. I had coded here and there and always enjoyed it and the freedom it gives you to build whatever you want with a little bit of work and creativity. If you're interested feel free to view my projects below. Need a new developer on your team? Need something built? Contact me on social media or my email me <a href="#icons">here</a></p>
 							<span class="image main"><img src="images/faceshot-image.jpeg" alt="" /></span>
 						</div>
 					</section>
@@ -85,14 +85,12 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Lorem gravida</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
+										<h3>Peaks</h3>
+										<p>A full stack application to store and log peaks you've summited. Made with Javscript, HTML, and CSS in the front-end and Express, Mongoose and MongoDB for the back-end</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+											<a href="images/peaks-image.jpeg" class="landscape"><img src="images/peaks-image.jpeg" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -107,24 +105,26 @@
 								<h2>Technologies</h2>
 							</header>
 							<div class="content">
-								<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+								<!-- <p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p> -->
 								<ul class="feature-icons">
-									<li class="icon solid fa-laptop">Consequat tempus</li>
-									<li class="icon solid fa-bolt">Etiam adipiscing</li>
-									<li class="icon solid fa-signal">Libero nullam</li>
-									<li class="icon solid fa-cog">Blandit condimentum</li>
-									<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-									<li class="icon solid fa-code">Nibh amet venenatis</li>
-									<li class="icon solid fa-cog">Blandit condimentum</li>
-									<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-									<li class="icon solid fa-code">Nibh amet venenatis</li>
+									<li class="icon solid fa-laptop">JavaScript</li>
+									<li class="icon solid fa-bolt">HTML/CSS</li>
+									<li class="icon solid fa-signal">React</li>
+									<li class="icon solid fa-cog">Mongoose</li>
+									<li class="icon solid fa-map-marker-alt">MongoDB</li>
+									<li class="icon solid fa-code">Express</li>
+									<li class="icon solid fa-cog">RESTful API's</li>
+									<li class="icon solid fa-map-marker-alt">PostgreSQL</li>
+									<li class="icon solid fa-code">JQuery</li>
+									<li class="icon solid fa-code">Node.js</li>
+									<li class="icon solid fa-code">GitHub</li>
 								</ul>
-								<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+								<p>Don't meet your teams tech stack but still interested? Let me know, I never back down from a challenge and love learning new technologies.</p>
 							</div>
 						</section>
 
 				<!-- Section -->
-					<section>
+					<!-- <section>
 						<header>
 							<h2>Duis sed adpiscing veroeros amet</h2>
 						</header>
@@ -135,7 +135,7 @@
 								<li><a href="#" class="button large">Learn More</a></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Elements -->
 				<!--
@@ -428,7 +428,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="#linkedin.com" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
 									</ul>
