--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<section>
 									<header>
 										<h3>Spot Guide</h3>
-										<p>This project was made to be a guide to new locations where you can ski, mountain bike, or just all around get out and enjoy yourself. Complete with photo upload, descriptions, locations, that all can be made and edited by the users. Made with React.js in the front-end and Django and python in the back-end.</p>
+										<p>This project was made to be a guide to new locations where you can ski, mountain bike, or just all around get out and enjoy yourself. Complete with photo upload, descriptions, locations, that all can be made and edited by the users. Made with React.js in the front-end and Django and python in the back-end. Check out the live project <a href="https://lss555.github.io/street-spots-client/">Here</a></p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -71,7 +71,7 @@
 								<section>
 									<header>
 										<h3>Dev Spot</h3>
-										<p>Social media application for developers. Has User profiles, posts, and much more! Built with React front-end and Express, MongoDB in the back-end.</p>
+										<p>Social media application for developers. Has User profiles, posts, and much more! Built with React front-end and Express, MongoDB in the back-end. Check out the live project <a href="https://team-stuckoverflow.github.io/devspot-client/#/">Here</a></p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -86,7 +86,7 @@
 								<section>
 									<header>
 										<h3>Peaks</h3>
-										<p>A full stack application to store and log peaks you've summited. Made with Javscript, HTML, and CSS in the front-end and Express, Mongoose and MongoDB for the back-end</p>
+										<p>A full stack application to store and log peaks you've summited. Made with Javscript, JQuery, HTML/CSS in the front-end and Express, Mongoose and MongoDB for the back-end. Check out the live project <a href="https://lss555.github.io/Peaks-Client/">Here</a></p>
 									</header>
 									<div class="content">
 										<div class="gallery">
