Resume, styling touch ups

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<h2>About</h2>
 						</header>
 						<div class="content">
-							<p>I'm a full stack engineer with a passion to find creative solutions and develop top tier applications.  I thrive under pressure and have worked in many different fields from ski lodges to security and demolition. Through those experiences I realized I wanted to make a career that I would be passionate about. I had coded here and there and always enjoyed it and the freedom it gives you to build whatever you want with a little bit of work and creativity. If you're interested feel free to view my projects below. Need a new developer on your team? Need something built? Contact me on social media or my email me <a href="#icons">here</a></p>
+							<p>I'm a full stack engineer with a passion to find creative solutions and develop top tier applications.  I thrive under pressure and have worked in many different fields from ski lodges to security and demolition. Through those experiences I realized I wanted to make a career that I would be passionate about. I had coded here and there and always enjoyed it and the freedom it gives you to build whatever you want with a little bit of work and creativity. If you're interested feel free to view my projects below. Need a new developer on your team? Need something built? Contact me on social media or email me <a href="#contact_info">here</a></p>
 							<span class="image main"><img src="images/faceshot-image.jpeg" alt="" /></span>
 						</div>
 					</section>
@@ -123,19 +123,20 @@
 							</div>
 						</section>
 
-				<!-- Section -->
-					<!-- <section>
+					<section>
 						<header>
-							<h2>Duis sed adpiscing veroeros amet</h2>
+							<h2>Resume</h2>
 						</header>
-						<div class="content">
-							<p><strong>Proin tempus feugiat</strong> sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.</p>
+						<div class="content resume-container">
+								<div class="gallery">
+									<a href="images/Chris-Heibel-resume.pdf" class="landscape"><img src="images/resume.png" alt="" /></a>
+							</div>
 							<ul class="actions">
-								<li><a href="#" class="button primary large">Get Started</a></li>
-								<li><a href="#" class="button large">Learn More</a></li>
+								<li><a href="images/Chris-Heibel-resume.pdf" class="button primary large resume-btn">Resume</a></li>
+								<!-- <li><a href="#" class="button large">Learn More</a></li> -->
 							</ul>
 						</div>
-					</section> -->
+					</section>
 
 				<!-- Elements -->
 				<!--
@@ -409,7 +410,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					<section>
 						<!-- contact form here	-->
 						<footer>
-							<ul class="items">
+							<ul class="items" id="contact_info">
 								<li>
 									<h3>Email</h3>
 									<a href="#">ChrisHeibel7@gmail.com</a>
@@ -425,12 +426,9 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#linkedin.com" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
+										<li><a href="https://www.instagram.com/grandmaster_steeze/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.linkedin.com/in/chrisheibel7/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://github.com/lss555" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
 								</li>
 							</ul>
