Added a few missing technologies

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
 									<li class="icon solid fa-code">JQuery</li>
 									<li class="icon solid fa-code">Node.js</li>
 									<li class="icon solid fa-code">GitHub</li>
+									<li class="icon solid fa-code">Grunt</li>
+									<li class="icon solid fa-code">Sass</li>
+									<li class="icon solid fa-code">Bootstrap</li>
 								</ul>
 								<p>Don't meet your teams tech stack but still interested? Let me know, I never back down from a challenge and love learning new technologies.</p>
 							</div>
