--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<h2>About</h2>
 						</header>
 						<div class="content">
-							<p>I'm a full stack engineer with a passion to find creative solutions and develop top tier applications.  I thrive under pressure and have worked in many different fields from ski lodges to security and demolition. Through those experiences I realized I wanted to make a career that I would be passionate about. I had coded here and there and always enjoyed it and the freedom it gives you to build whatever you want with a little bit of work and creativity. If you're interested feel free to view my projects below. Need a new developer on your team? Need something built? Contact me on social media or email me <a href="#contact_info">here</a></p>
+							<p>I'm a full stack engineer with a passion to find creative solutions and develop top tier applications.  I thrive under pressure and have worked in many different fields from ski lodges to security and demolition. Through those experiences I realized I wanted to make a career that I would be passionate about. I had coded here and there and always enjoyed it and the freedom it gives you to build whatever you want with a little bit of work and creativity. If you're interested feel free to view my projects below. Need a new developer on your team? Need something built? Contact me on social media or email me <a href="#contact_info"><strong>here</strong>.</a></p>
 							<span class="image main"><img src="images/faceshot-image.jpeg" alt="" /></span>
 						</div>
 					</section>
@@ -55,7 +55,7 @@
 								<section>
 									<header>
 										<h3>Spot Guide</h3>
-										<p>This project was made to be a guide to new locations where you can ski, mountain bike, or just all around get out and enjoy yourself. Complete with photo upload, descriptions, locations, that all can be made and edited by the users. Made with React.js in the front-end and Django and python in the back-end. Check out the live project <a href="https://lss555.github.io/street-spots-client/">Here</a></p>
+										<p>This project was made to be a guide to new locations where you can ski, mountain bike, or just all around get out and enjoy yourself. Complete with photo upload, descriptions, locations, that all can be made and edited by the users. Made with React.js in the front-end and Django and python in the back-end. Check out the live project <a href="https://lss555.github.io/street-spots-client/"><strong>here</strong>.</a></p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -71,7 +71,7 @@
 								<section>
 									<header>
 										<h3>Dev Spot</h3>
-										<p>Social media application for developers. Has User profiles, posts, and much more! Built with React front-end and Express, MongoDB in the back-end. Check out the live project <a href="https://team-stuckoverflow.github.io/devspot-client/#/">Here</a></p>
+										<p>Social media application for developers. Has User profiles, posts, and much more! Built with React front-end and Express, MongoDB in the back-end. Check out the live project <a href="https://team-stuckoverflow.github.io/devspot-client/#/"><strong>here</strong>.</a></p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -86,7 +86,7 @@
 								<section>
 									<header>
 										<h3>Peaks</h3>
-										<p>A full stack application to store and log peaks you've summited. Made with Javscript, JQuery, HTML/CSS in the front-end and Express, Mongoose and MongoDB for the back-end. Check out the live project <a href="https://lss555.github.io/Peaks-Client/">Here</a></p>
+										<p>A full stack application to store and log peaks you've summited. Made with Javscript, JQuery, HTML/CSS in the front-end and Express, Mongoose and MongoDB for the back-end. Check out the live project <a href="https://lss555.github.io/Peaks-Client/"><strong>here</strong>.</a></p>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -122,25 +122,25 @@
 									<li class="icon solid fa-code">Sass</li>
 									<li class="icon solid fa-code">Bootstrap</li>
 								</ul>
-								<p>Don't meet your teams tech stack but still interested? Let me know, I never back down from a challenge and love learning new technologies.</p>
+								<p>Don't meet your team's tech stack but still interested? Let me know, I never back down from a challenge and love learning new technologies.</p>
 							</div>
 						</section>
 
-					<section>
+					<section class="resume-info">
 						<header>
 							<h2>Resume</h2>
 						</header>
 						<div class="content resume-container">
 								<div class="gallery">
-									<a href="images/Chris-Heibel-resume.pdf" class="landscape"><img src="images/resume.png" alt="" /></a>
+									<a href="images/Chris-Heibel-resume.pdf" class="landscape"><embed src="images/Chris-Heibel-resume.pdf" width="500" height="375"></a>
 							</div>
 							<ul class="actions">
-								<li><a href="images/Chris-Heibel-resume.pdf" class="button primary large resume-btn">Resume</a></li>
+								<li><a href="images/Chris-Heibel-resume.pdf" class="button primary large resume-btn">Download</a></li>
 								<!-- <li><a href="#" class="button large">Learn More</a></li> -->
 							</ul>
 						</div>
 					</section>
-
+<!-- <img src="images/Chris-Heibel-resume.pdf" alt="" /> -->
 				<!-- Elements -->
 				<!--
 					<section>
@@ -416,7 +416,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items" id="contact_info">
 								<li>
 									<h3>Email</h3>
-									<a href="#">ChrisHeibel7@gmail.com</a>
+									<a href="#">Chrisheibel7@gmail.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
