--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								<section>
 									<header>
 										<h3>Dev Spot</h3>
-										<p>Social media application for developers. Has User profiles, posts, and much more! Built with React front-end and Express, MongoDB in the back-end. Check out the live project <a href="https://team-stuckoverflow.github.io/devspot-client/#/"><strong>here</strong>.</a></p>
+										<p>Social media application for developers. Has User profiles, posts, and much more! Built with React in the front-end and Express, MongoDB, and Mongoose in the back-end. Check out the live project <a href="https://team-stuckoverflow.github.io/devspot-client/#/"><strong>here</strong>.</a></p>
 									</header>
 									<div class="content">
 										<div class="gallery">
