--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<section>
 									<header>
 										<h3>Spot Guide</h3>
-										<p>This project was made to be a guide to new locations where you can ski, mountain bike, or just all around get out and enjoy yourself. Complete with photo upload, descriptions, locations, that all can be made and edited by the users. Made with React.js in the front-end and Django and python in the back-end. Check out the live project <a href="https://lss555.github.io/street-spots-client/"><strong>here</strong>.</a></p>
+										<p>This project was made to be a guide to new locations where you can ski, mountain bike, or just all around get out and enjoy yourself. Complete with photos, descriptions, locations, that all can be made and edited by the users. Made with React.js in the front-end and Django and python in the back-end. Check out the live project <a href="https://lss555.github.io/street-spots-client/"><strong>here</strong>.</a></p>
 									</header>
 									<div class="content">
 										<div class="gallery">
