--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<li><a href="https://www.instagram.com/grandmaster_steeze/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<!-- <li><a href="https://www.instagram.com/grandmaster_steeze/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 										<li><a href="https://www.linkedin.com/in/chrisheibel7/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://github.com/lss555" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									</ul>
